Prevent deadlines from spreading in y axis, they should stack from top to down without extra spacing

--- a/client/src/components/templates/DeadlineRenderer.css
+++ b/client/src/components/templates/DeadlineRenderer.css
@@ -15,6 +15,7 @@
 
 	display: flex;
 	justify-content: center;
+	align-content: flex-start;
 	flex-wrap: wrap;
 	scrollbar-width: thin;
 }
